--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -35,6 +35,7 @@
       padding: 14px 26px;
       line-height: 20px;
       margin-left: 91px;
+      margin-bottom: 526px;
     }
 
     @media (min-width: $desktop-width) {
