--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -3,6 +3,15 @@
 
 .hero {
   position: relative;
+  padding-bottom: 20px;
+
+  @media (min-width: $tablet-width) {
+    padding-bottom: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-bottom: 82px;
+  }
 }
 
 .hero__container {
@@ -39,7 +48,7 @@
 
   @media (min-width: $desktop-width) {
     display: grid;
-    margin: -140px 0 82px;
+    margin: -140px 0 0;
     grid-template-columns: 1fr 1fr;
     min-height: 694px;
 
@@ -131,6 +140,7 @@
 
   @media (min-width: $tablet-width) {
     position: static;
+    min-height: 0;
     background-image: none;
     background-color: #ffffff;
   }
