--- a/source/sass/blocks/nutrition-program.scss
+++ b/source/sass/blocks/nutrition-program.scss
@@ -1,27 +1,41 @@
 @use "../variables.scss" as *;
+@use "../mixins.scss" as *;
 
 .nutrition-program {
+  @include site-container;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   gap: 20px;
-  margin: 0 20px;
-  padding: 20px 0 20px;
-}
+  padding-bottom: 20px;
 
-@media (min-width: $tablet-width) {
-  .nutrition-program {
+  @media (min-width: $tablet-width) {
     gap: 30px;
-    padding: 0;
-    margin: 0 30px 45px;
+    padding-bottom: 45px;
+    // margin: 0 30px 45px;
   }
-}
 
-@media (min-width: $desktop-width) {
-  .nutrition-program {
+  @media (min-width: $desktop-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 80px;
-    margin: 0 110px 71px;
+    padding-bottom: 71px;
   }
 }
+
+// @media (min-width: $tablet-width) {
+//   .nutrition-program {
+//     gap: 30px;
+//     padding: 0;
+//     margin: 0 30px 45px;
+//   }
+// }
+
+// @media (min-width: $desktop-width) {
+//   .nutrition-program {
+//     display: grid;
+//     grid-template-columns: 1fr 1fr;
+//     gap: 80px;
+//     margin: 0 110px 71px;
+//   }
+// }
