--- a/source/sass/base/base.scss
+++ b/source/sass/base/base.scss
@@ -7,25 +7,13 @@ html {
 body {
   display: flex;
   flex-direction: column;
+  align-items: center;
   font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
   color: #000000;
   background-color: #ffffff;
   min-height: 100%;
-  // width: 320px;
   margin: 0 auto;
-}
-
-@media (min-width: $tablet-width) {
-  body {
-    // width: 770px;
-  }
-}
-
-@media (min-width: $desktop-width) {
-  body {
-    // width: 1440px;
-  }
 }
 
 img {
