--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,24 +1,48 @@
 @use "../variables.scss" as *;
+@use "../mixins.scss" as *;
 
 .footer {
+  @include site-container;
+  background-color: $bgcolor-secondary;
+}
+
+.footer__container {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  align-items: center;
   gap: 40px;
-  padding: 40px 20px;
-  background-color: $bgcolor-secondary;
+  box-sizing: border-box;
+  padding-top: 40px;
+  padding-bottom: 40px;
+
+  @media (min-width: $tablet-width) {
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 0;
+    padding-top: 55px;
+    padding-bottom: 55px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 67px;
+    padding-bottom: 67px;
+  }
 }
 
 .footer__academy-logo-wrapper {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   align-items: center;
+
+  @media (min-width: $tablet-width) {
+    // justify-content: space-between;
+    width: 167px;
+  }
 }
 
 .footer__academy-logo {
   color: #666666;
-  margin-left: 141px;
 
   &:hover,
   &:focus {
