--- a/source/sass/blocks/invite-dealers.scss
+++ b/source/sass/blocks/invite-dealers.scss
@@ -9,55 +9,26 @@
   &--secondary {
     background-color: $bgcolor-secondary;
   }
+
+  @media (min-width: $desktop-width) {
+    position: relative;
+  }
 }
 
 .invite-dealers__wrapper {
+  @include site-container;
   display: flex;
   align-items: center;
-  padding: 26px 20px;
-}
+  padding-top: 26px;
+  padding-bottom: 26px;
+  box-sizing: border-box;
 
-.invite-dealers__title {
-  @include site-title(16px, 20px);
-  text-transform: uppercase;
-}
-
-.invite-dealers__address {
-  @include site-content (14px, 18px);
-}
-
-.invite-dealers__map-wrapper {
-  position: relative;
-}
-
-.invite-dealers__map-pin {
-  position: absolute;
-  top: 139px;
-  left: 134px;
-}
-
-@media (min-width: $tablet-width) {
-  .invite-dealers__wrapper {
-    padding: 56px 70px;
+  @media (min-width: $tablet-width) {
+    padding: 56px 40px;
     gap: 296px;
   }
 
-  .invite-dealers__title {
-    @include site-title(20px, 26px);
-  }
-
-  .invite-dealers__address {
-    @include site-content (16px, 20px);
-    text-align: right;
-  }
-}
-
-@media (min-width: $desktop-width) {
-  .invite-dealers {
-    position: relative;
-  }
-
-  .invite-dealers__wrapper {
+  @media (min-width: $desktop-width) {
     position: absolute;
     top: 95px;
     left: 110px;
@@ -70,3 +41,100 @@
     background-color: #ffffff;
   }
 }
+
+.invite-dealers__title {
+  @include site-title(16px, 20px);
+  text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    @include site-title(20px, 26px);
+  }
+}
+
+.invite-dealers__address {
+  @include site-content (14px, 18px);
+
+  @media (min-width: $tablet-width) {
+    @include site-content (16px, 20px);
+    text-align: right;
+  }
+}
+
+.invite-dealers__map-wrapper {
+  position: relative;
+  min-height: 362px;
+  background: url("../img/map.png") no-repeat;
+
+  @media (min-width: $tablet-width) {
+    background: url("../img/map-tablet.png") no-repeat;
+  }
+
+  @media (min-width: $desktop-width) {
+    background: url("../img/map-desktop.png") no-repeat;
+  }
+
+  &::after {
+    position: absolute;
+    display: block;
+    content: "";
+    width: 57px;
+    height: 53px;
+    top: 139px;
+    left: 134px;
+    background: url("../img/map-pin.png") no-repeat;
+
+    @media (min-width: $tablet-width) {
+      width: 113px;
+      height: 106px;
+      top: 146px;
+      left: 333px;
+      background: url("../img/map-pin-tablet.png") no-repeat;
+    }
+
+    @media (min-width: $desktop-width) {
+      top: 131px;
+      left: 908px;
+    }
+  }
+}
+
+// .invite-dealers__map-pin {
+//   position: absolute;
+//   top: 139px;
+//   left: 134px;
+// }
+
+// @media (min-width: $tablet-width) {
+//   .invite-dealers__wrapper {
+//     padding: 56px 70px;
+//     gap: 296px;
+//   }
+
+//   .invite-dealers__title {
+//     @include site-title(20px, 26px);
+//   }
+
+//   .invite-dealers__address {
+//     @include site-content (16px, 20px);
+//     text-align: right;
+//   }
+// }
+
+// @media (min-width: $desktop-width) {
+//   .invite-dealers {
+//     position: relative;
+//   }
+
+//   .invite-dealers__wrapper {
+//     position: absolute;
+//     top: 95px;
+//     left: 110px;
+//     box-sizing: border-box;
+//     gap: 87px;
+//     padding: 56px 60px 56px 80px;
+//     width: 565px;
+//     height: 198px;
+//     z-index: 1;
+//     background-color: #ffffff;
+//   }
+// }
