--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -70,6 +70,7 @@
 @media (min-width: $tablet-width) {
   .main-nav__wrapper {
     display: flex;
+    // width: 100%;
     flex-direction: row;
     gap: 35px;
   }
