--- a/source/sass/blocks/catalog-additional.scss
+++ b/source/sass/blocks/catalog-additional.scss
@@ -1,6 +1,7 @@
 @use "../mixins.scss" as *;
 
 .catalog-additional {
+  @include site-container;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
