--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,6 +1,7 @@
 @use "../mixins.scss" as *;
 
 .catalog {
+  @include site-container;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
