--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -18,7 +18,7 @@
 
 .main-nav__toggle {
   position: absolute;
-  top: -27px;
+  top: -30px;
   right: 0;
   width: 24px;
   height: 24px;
@@ -61,16 +61,37 @@
     color: #000000;
     border-top: 1px solid #e6e6e6;
   }
+
+  .main-nav--nojs .main-nav__toggle {
+    display: none;
+  }
+
+  .main-nav--nojs .main-nav__wrapper {
+    position: static;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    background-color: #ffffff;
+  }
+
+  .main-nav--nojs .main-nav__link {
+    @include site-title(20px, 20px);
+    padding: 22px 0 24px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #000000;
+    border-top: 1px solid #e6e6e6;
+  }
 }
 
 .main-nav--opened .main-nav__toggle {
-  background: url("../img/icons/close.svg") no-repeat;
+  background: url("../img/icons/close.svg") no-repeat top center;
 }
 
 @media (min-width: $tablet-width) {
   .main-nav__wrapper {
     display: flex;
-    // width: 100%;
     flex-direction: row;
     gap: 35px;
   }
