--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -2,7 +2,7 @@
 @use "../variables.scss" as *;
 
 .example {
-  @include site-container;
+  width: 100vw;
   position: relative;
   padding-top: 25px;
   padding-bottom: 40px;
@@ -14,6 +14,7 @@
 }
 
 .example__container {
+  @include site-container;
   display: flex;
   flex-direction: column;
 
