--- a/source/sass/blocks/form-container.scss
+++ b/source/sass/blocks/form-container.scss
@@ -1,10 +1,11 @@
 @use "../mixins.scss" as *;
 
 .form-container {
+  @include site-container;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  padding: 0 20px;
+  // padding: 0 20px;
 }
 
 .form-container__title {
