--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  gap: 23px;
+  // gap: 23px;
 }
 
 .form__cat-data {
@@ -19,11 +19,20 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  gap: 14px;
+  gap: 13px;
   max-width: 100%;
   padding: 0;
   margin: 0;
   border: none;
+
+  &--owner,
+  &--comment {
+    margin-bottom: 24px;
+  }
+
+  &--additional {
+    margin-bottom: 34px;
+  }
 }
 
 .form__input-wrapper {
@@ -35,8 +44,6 @@
 
 .form__label {
   @include site-title(16px, 18px);
-  font-size: 16px;
-  line-height: 18px;
 }
 
 .form__input {
@@ -46,6 +53,7 @@
   font-size: 16px;
   line-height: 18px;
   padding: 14px 15px;
+  border: 1px solid #e7e7e7;
 }
 
 .form__title {
@@ -56,9 +64,10 @@
 
 .form__comment {
   @include site-title(16px, 18px);
-  padding: 10px 12px 125px 15px;
+  padding: 10px 12px 10px 15px;
+  min-height: 150px;
   font-family: inherit;
-  border: none;
+  border: 1px solid #e7e7e7;
   text-transform: uppercase;
   color: #444444;
 }
@@ -67,4 +76,5 @@
   @include site-content (14px, 16px);
   color: #000000;
   align-self: center;
+  padding-top: 21px;
 }
