--- a/source/sass/blocks/nutrition-program.scss
+++ b/source/sass/blocks/nutrition-program.scss
@@ -2,6 +2,10 @@
 @use "../mixins.scss" as *;
 
 .nutrition-program {
+  width: 100vw;
+}
+
+.nutrition-program__container {
   @include site-container;
   display: flex;
   flex-wrap: wrap;
@@ -12,7 +16,6 @@
   @media (min-width: $tablet-width) {
     gap: 30px;
     padding-bottom: 45px;
-    // margin: 0 30px 45px;
   }
 
   @media (min-width: $desktop-width) {
