--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -1,27 +1,42 @@
 @use "../mixins.scss" as *;
+@use "../variables.scss" as *;
 
 .product-card {
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: end;
-  row-gap: 18px;
+  padding-top: 11px;
+  padding-bottom: 14px;
 
-  th {
-    font-weight: 400;
-    text-align: left;
-  }
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    width: 324px;
+    min-height: 430px;
+    padding: 0 36px 39px;
+    background-color: #f2f2f2;
 
-  td {
-    text-align: right;
+    @media (min-width: $desktop-width) {
+      width: 245px;
+      padding: 0 35px 40px 40px;
+    }
   }
 
   &--show-more {
+    position: relative;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
     row-gap: 0;
-    padding-top: 78px;
+    padding-top: 70px;
+
+    @media (min-width: $tablet-width) {
+      padding-top: 161px;
+    }
 
     .product-card__button {
       align-self: stretch;
@@ -36,6 +51,28 @@
       @include site-content(14px, 18px);
       margin-bottom: 21px;
     }
+
+    @media (min-width: $tablet-width) {
+      margin-top: 0;
+    }
+  }
+
+  &--show-more::before {
+    position: absolute;
+    top: 17px;
+    left: 125px;
+    width: 30px;
+    height: 30px;
+    content: "";
+    background: url("../img/icons/plus-icon.svg") no-repeat;
+
+    @media (min-width: $tablet-width) {
+      width: 60px;
+      height: 60px;
+      top: 52px;
+      left: 132px;
+      background: url("../img/icons/plus-icon-tablet.svg") no-repeat;
+    }
   }
 
   &--additional {
@@ -44,9 +81,17 @@
     flex-direction: column;
     align-items: stretch;
     row-gap: 14px;
+    padding-top: 0;
+    padding-bottom: 0;
 
     .product-card__title {
       line-height: 16px;
+      margin-bottom: 0;
+    }
+
+    .product-card__description {
+      @include site-content(14px, 14px);
+      margin-bottom: 0;
     }
   }
 }
@@ -55,21 +100,69 @@
   justify-self: center;
   grid-column: 1/2;
   grid-row: 1/3;
+  margin-bottom: 13px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 34px;
+  }
 }
 
 .product-card__title {
   @include site-title(16px, 20px);
+  color: #222222;
   grid-column: 2/3;
   grid-row: 1/2;
   padding-right: 64px;
+  margin-bottom: 14px;
+
+  @media (min-width: $tablet-width) {
+    padding-right: 0;
+    margin-bottom: 21px;
+  }
 }
 
 .product-card__description {
-  font-family: var(--secondary-font);
-  font-size: 12px;
-  line-height: 16px;
+  @include site-content(12px, 16px);
   grid-column: 2/3;
   grid-row: 2/3;
+  margin-bottom: 13px;
+  box-sizing: border-box;
+
+  th {
+    font-weight: 400;
+    text-align: left;
+  }
+
+  td {
+    text-align: right;
+  }
+
+  @media (min-width: $tablet-width) {
+    @include site-content(16px, 16px);
+    width: 250px;
+    margin-bottom: 33px;
+
+    tbody {
+      display: flex;
+      flex-grow: 1;
+      flex-direction: column;
+      box-sizing: border-box;
+      width: 100%;
+      margin-bottom: 33px;
+
+      tr {
+        display: flex;
+        justify-content: space-between;
+        border-bottom: 1px solid #cdcdcd;
+        padding-top: 7px;
+        padding-bottom: 9px;
+      }
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 169px;
+  }
 }
 
 .product-card__button {
@@ -77,4 +170,8 @@
   grid-row: 3/4;
   padding-top: 10px;
   padding-bottom: 10px;
+
+  @media (min-width: $tablet-width) {
+    align-self: stretch;
+  }
 }
