--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -11,7 +11,7 @@
   @media (min-width: $tablet-width) {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     box-sizing: border-box;
     width: 324px;
@@ -33,34 +33,50 @@
     align-items: center;
     row-gap: 0;
     padding-top: 70px;
+    background-color: inherit;
 
-    @media (min-width: $tablet-width) {
-      padding-top: 161px;
+    .product-card__title {
+      text-transform: uppercase;
+      padding-right: 0;
+
+      @media (min-width: $tablet-width) {
+        max-width: 134px;
+        text-transform: uppercase;
+        text-align: center;
+        margin-bottom: 23px;
+        padding: 0;
+      }
+    }
+
+    .product-card__subtitle {
+      @include site-content(12px, 16px);
+      margin-bottom: 21px;
+
+      @media (min-width: $tablet-width) {
+        @include site-content(14px, 18px);
+        text-align: center;
+        max-width: 165px;
+        margin-bottom: 87px;
+      }
     }
 
     .product-card__button {
       align-self: stretch;
     }
 
-    .product-card__title {
-      margin-bottom: 8px;
-      padding: 0;
-    }
-
-    .product-card__subtitle {
-      @include site-content(14px, 18px);
-      margin-bottom: 21px;
-    }
-
     @media (min-width: $tablet-width) {
+      justify-content: flex-end;
+      padding-top: 161px;
       margin-top: 0;
+      border: 2px solid #f2f2f2;
     }
   }
 
   &--show-more::before {
     position: absolute;
     top: 17px;
-    left: 125px;
+    left: 50%;
+    transform: translateX(-50%);
     width: 30px;
     height: 30px;
     content: "";
@@ -70,30 +86,67 @@
       width: 60px;
       height: 60px;
       top: 52px;
-      left: 132px;
+      left: 50%;
+      transform: translateX(-50%);
       background: url("../img/icons/plus-icon-tablet.svg") no-repeat;
     }
   }
 
-  &--additional {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: stretch;
-    row-gap: 14px;
-    padding-top: 0;
-    padding-bottom: 0;
+  // &--additional {
+  //   display: flex;
+  //   flex-wrap: wrap;
+  //   flex-direction: column;
+  //   align-items: stretch;
+  //   row-gap: 14px;
+  //   padding-top: 0;
+  //   padding-bottom: 0;
+  //   background-color: inherit;
 
-    .product-card__title {
-      line-height: 16px;
-      margin-bottom: 0;
-    }
+  //   .product-card__title {
+  //     line-height: 16px;
+  //     margin-bottom: 0;
 
-    .product-card__description {
-      @include site-content(14px, 14px);
-      margin-bottom: 0;
-    }
-  }
+  //     @media (min-width: $tablet-width) {
+  //       grid-column: 1/2;
+  //     }
+  //   }
+
+  //   .product-card__description {
+  //     @include site-content(14px, 14px);
+  //     margin-bottom: 0;
+
+  //     @media (min-width: $tablet-width) {
+  //       grid-column: 2/3;
+  //       grid-row: 1/2;
+  //     }
+  //   }
+
+  //   .product-card__button {
+  //     @media (min-width: $tablet-width) {
+  //       grid-column: 1/3;
+  //     }
+  //   }
+
+  //   @media (min-width: $tablet-width) {
+  //     width: auto;
+  //     min-height: auto;
+  //     display: grid;
+  //     row-gap: 25px;
+  //     grid-template-columns: 1fr 1fr;
+  //     padding: 0;
+
+  //     .product-card__description {
+  //       tbody {
+  //         flex-grow: 0;
+  //         align-self: flex-end;
+  //       }
+  //     }
+
+  //     .product-card__button {
+  //       flex-grow: 1;
+  //     }
+  //   }
+  // }
 }
 
 .product-card__image {
@@ -148,7 +201,6 @@
       flex-direction: column;
       box-sizing: border-box;
       width: 100%;
-      margin-bottom: 33px;
 
       tr {
         display: flex;
