--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,6 +23,7 @@
 @use "blocks/catalog.scss";
 @use "blocks/product-card.scss";
 @use "blocks/catalog-additional.scss";
+@use "blocks/product-card-additional.scss";
 @use "blocks/promotion.scss";
 
 //Блоки form
