--- a/source/sass/blocks/catalog-additional.scss
+++ b/source/sass/blocks/catalog-additional.scss
@@ -6,14 +6,31 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  gap: 32px;
-  padding-bottom: 19px;
 
   @media (min-width: $tablet-width) {
-    padding: 0 69px 28px;
+    gap: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: grid;
+    grid-template-columns: 896px 245px;
+    column-gap: 79px;
+    padding-bottom: 85px;
   }
 }
 
 .catalog-additional__title {
   @include site-title(24px, 24px);
+  margin-bottom: 36px;
+
+  @media (min-width: $tablet-width) {
+    margin-left: 36px;
+    margin-bottom: 80px;
+  }
+
+  @media (min-width: $desktop-width) {
+    @include site-title(36px, 36px);
+    grid-column: 1/3;
+    margin-bottom: 80px;
+  }
 }
