--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -1,17 +1,17 @@
 @use "variables.scss" as *;
 
 @mixin site-container {
-  width: 320px;
+  // width: 320px;
   padding: 0 20px;
   box-sizing: border-box;
 
   @media (min-width: $tablet-width) {
-    width: 770px;
+    // width: 768px;
     padding: 0 30px;
   }
 
   @media (min-width: $desktop-width) {
-    width: 1440px;
+    // width: 1440px;
     padding: 0 110px;
   }
 }
