--- a/source/sass/blocks/form-container.scss
+++ b/source/sass/blocks/form-container.scss
@@ -1,21 +1,19 @@
 @use "../mixins.scss" as *;
 
-.form-container {
-  @include site-container;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  // padding: 0 20px;
-}
+// .form-container {
+//   // @include site-container;
+//   display: flex;
+//   flex-wrap: wrap;
+//   flex-direction: column;
+// }
 
 .form-container__title {
   @include site-title(36px, 36px);
-  margin-bottom: 37px;
-  padding-top: 27px;
+  padding: 27px 20px 37px;
 }
 
 .form-container__subtitle {
   @include site-title(14px, 18px);
-  margin-bottom: 39px;
-  margin-right: 64px;
+  padding: 0 74px 39px 20px;
+  text-transform: uppercase;
 }
