--- a/source/sass/blocks/main-container.scss
+++ b/source/sass/blocks/main-container.scss
@@ -1,3 +1,4 @@
+@use "../mixins.scss" as *;
 @use "../variables.scss" as *;
 
 .main-container {
@@ -5,9 +6,13 @@
   display: flex;
   flex-direction: column;
   width: 100vw;
-  // align-items: center;
+  border-top: 1px solid #d9d9d9;
+
+  @media (min-width: $tablet-width) {
+    border-top: none;
+  }
 
   &--form {
-    gap: 32px;
+    // gap: 32px;
   }
 }
