--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -165,12 +165,20 @@
   color: #222222;
   grid-column: 2/3;
   grid-row: 1/2;
+  text-transform: uppercase;
   padding-right: 64px;
   margin-bottom: 14px;
 
   @media (min-width: $tablet-width) {
+    @include site-title(20px, 24px);
+    max-width: 165px;
     padding-right: 0;
     margin-bottom: 21px;
+    text-align: center;
+  }
+
+  @media (min-width: $desktop-width) {
+    @include site-title(20px, 21px);
   }
 }
 
@@ -195,20 +203,12 @@
     width: 250px;
     margin-bottom: 33px;
 
-    tbody {
+    tr {
       display: flex;
-      flex-grow: 1;
-      flex-direction: column;
-      box-sizing: border-box;
-      width: 100%;
-
-      tr {
-        display: flex;
-        justify-content: space-between;
-        border-bottom: 1px solid #cdcdcd;
-        padding-top: 7px;
-        padding-bottom: 9px;
-      }
+      justify-content: space-between;
+      border-bottom: 1px solid #cdcdcd;
+      padding-top: 7px;
+      padding-bottom: 9px;
     }
   }
 
