--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -1,18 +1,21 @@
 @use "variables.scss" as *;
 
 @mixin site-container {
-  // width: 320px;
-  padding: 0 20px;
+  max-width: 320px;
+  padding-left: 20px;
+  padding-right: 20px;
   box-sizing: border-box;
 
   @media (min-width: $tablet-width) {
-    // width: 768px;
-    padding: 0 30px;
+    max-width: 768px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 
   @media (min-width: $desktop-width) {
-    // width: 1440px;
-    padding: 0 110px;
+    max-width: 1440px;
+    padding-left: 110px;
+    padding-right: 110px;
   }
 }
 
