--- a/5/css/style.css
+++ b/5/css/style.css
@@ -72,7 +72,9 @@ a {
 }
 
 .header__container {
-  padding: 0 20px;
+  max-width: 320px;
+  padding-left: 20px;
+  padding-right: 20px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -85,12 +87,16 @@ a {
 }
 @media (min-width: 768px) {
   .header__container {
-    padding: 0 30px;
+    max-width: 768px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 @media (min-width: 1400px) {
   .header__container {
-    padding: 0 110px;
+    max-width: 1440px;
+    padding-left: 110px;
+    padding-right: 110px;
   }
 }
 @media (min-width: 768px) {
@@ -199,6 +205,12 @@ a {
 }
 .button--submit {
   border: none;
+}
+@media (min-width: 768px) {
+  .button--submit {
+    width: 282px;
+    height: 52px;
+  }
 }
 
 .main-nav {
@@ -345,11 +357,13 @@ a {
   display: flex;
   flex-direction: column;
   width: 100vw;
+  border-top: 1px solid #d9d9d9;
 }
-.main-container--form {
-  gap: 32px;
+@media (min-width: 768px) {
+  .main-container {
+    border-top: none;
+  }
 }
-
 .hero {
   width: 100vw;
   position: relative;
@@ -363,9 +377,9 @@ a {
   width: 100%;
   min-height: 302px;
   background-color: #639e40;
-  background-image: url("../img/green.png"), url("../img/cat.png");
-  background-repeat: no-repeat, no-repeat;
-  background-position: top center, top center;
+  background-image: url("../img/cat.png");
+  background-repeat: no-repeat;
+  background-position: top center;
   z-index: -1;
 }
 @media (min-width: 768px) {
@@ -381,8 +395,8 @@ a {
     min-width: 720px;
     min-height: 694px;
     background-color: transparent;
-    background-image: url("../img/green-desktop.png"), url("../img/index-background-desktop1.png");
-    background-position: top right, top right;
+    background-image: url("../img/index-background-desktop1.png");
+    background-position: top right;
   }
 }
 @media (min-width: 768px) {
@@ -392,6 +406,7 @@ a {
 }
 @media (min-width: 1400px) {
   .hero {
+    max-width: 1440px;
     min-height: 694px;
     padding-bottom: 82px;
     margin-top: -108px;
@@ -399,7 +414,9 @@ a {
 }
 
 .hero__container {
-  padding: 0 20px;
+  max-width: 320px;
+  padding-left: 20px;
+  padding-right: 20px;
   box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
@@ -409,12 +426,16 @@ a {
 }
 @media (min-width: 768px) {
   .hero__container {
-    padding: 0 30px;
+    max-width: 768px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 @media (min-width: 1400px) {
   .hero__container {
-    padding: 0 110px;
+    max-width: 1440px;
+    padding-left: 110px;
+    padding-right: 110px;
   }
 }
 .hero__container::after {
@@ -538,7 +559,9 @@ a {
 }
 
 .nutrition-program__container {
-  padding: 0 20px;
+  max-width: 320px;
+  padding-left: 20px;
+  padding-right: 20px;
   box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
@@ -548,12 +571,16 @@ a {
 }
 @media (min-width: 768px) {
   .nutrition-program__container {
-    padding: 0 30px;
+    max-width: 768px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 @media (min-width: 1400px) {
   .nutrition-program__container {
-    padding: 0 110px;
+    max-width: 1440px;
+    padding-left: 110px;
+    padding-right: 110px;
   }
 }
 @media (min-width: 768px) {
@@ -747,18 +774,24 @@ a {
 }
 
 .advantages__container {
-  padding: 0 20px;
+  max-width: 320px;
+  padding-left: 20px;
+  padding-right: 20px;
   box-sizing: border-box;
   padding-bottom: 49px;
 }
 @media (min-width: 768px) {
   .advantages__container {
-    padding: 0 30px;
+    max-width: 768px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 @media (min-width: 1400px) {
   .advantages__container {
-    padding: 0 110px;
+    max-width: 1440px;
+    padding-left: 110px;
+    padding-right: 110px;
   }
 }
 @media (min-width: 768px) {
@@ -954,19 +987,25 @@ a {
 }
 
 .example__container {
-  padding: 0 20px;
+  max-width: 320px;
+  padding-left: 20px;
+  padding-right: 20px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
 }
 @media (min-width: 768px) {
   .example__container {
-    padding: 0 30px;
+    max-width: 768px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 @media (min-width: 1400px) {
   .example__container {
-    padding: 0 110px;
+    max-width: 1440px;
+    padding-left: 110px;
+    padding-right: 110px;
   }
 }
 @media (min-width: 768px) {
@@ -1195,7 +1234,9 @@ a {
 }
 
 .invite-dealers__wrapper {
-  padding: 0 20px;
+  max-width: 320px;
+  padding-left: 20px;
+  padding-right: 20px;
   box-sizing: border-box;
   display: flex;
   align-items: center;
@@ -1205,17 +1246,21 @@ a {
 }
 @media (min-width: 768px) {
   .invite-dealers__wrapper {
-    padding: 0 30px;
+    max-width: 768px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 @media (min-width: 1400px) {
   .invite-dealers__wrapper {
-    padding: 0 110px;
+    max-width: 1440px;
+    padding-left: 110px;
+    padding-right: 110px;
   }
 }
 @media (min-width: 768px) {
   .invite-dealers__wrapper {
-    padding: 56px 40px;
+    padding: 56px 70px;
     gap: 296px;
   }
 }
@@ -1283,31 +1328,6 @@ a {
     background: url("../img/map-desktop.png") no-repeat;
   }
 }
-.invite-dealers__map-wrapper::after {
-  position: absolute;
-  display: block;
-  content: "";
-  width: 57px;
-  height: 53px;
-  top: 139px;
-  left: 134px;
-  background: url("../img/map-pin.png") no-repeat;
-}
-@media (min-width: 768px) {
-  .invite-dealers__map-wrapper::after {
-    width: 113px;
-    height: 106px;
-    top: 146px;
-    left: 333px;
-    background: url("../img/map-pin-tablet.png") no-repeat;
-  }
-}
-@media (min-width: 1400px) {
-  .invite-dealers__map-wrapper::after {
-    top: 131px;
-    left: 908px;
-  }
-}
 
 .invite-dealers__map-wrapper iframe {
   border: none;
@@ -1327,7 +1347,9 @@ a {
 }
 
 .footer__container {
-  padding: 0 20px;
+  max-width: 320px;
+  padding-left: 20px;
+  padding-right: 20px;
   box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
@@ -1339,12 +1361,16 @@ a {
 }
 @media (min-width: 768px) {
   .footer__container {
-    padding: 0 30px;
+    max-width: 768px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 @media (min-width: 1400px) {
   .footer__container {
-    padding: 0 110px;
+    max-width: 1440px;
+    padding-left: 110px;
+    padding-right: 110px;
   }
 }
 @media (min-width: 768px) {
@@ -1430,7 +1456,9 @@ a {
 }
 
 .catalog {
-  padding: 0 20px;
+  max-width: 320px;
+  padding-left: 20px;
+  padding-right: 20px;
   box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
@@ -1441,12 +1469,16 @@ a {
 }
 @media (min-width: 768px) {
   .catalog {
-    padding: 0 30px;
+    max-width: 768px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 @media (min-width: 1400px) {
   .catalog {
-    padding: 0 110px;
+    max-width: 1440px;
+    padding-left: 110px;
+    padding-right: 110px;
   }
 }
 @media (min-width: 768px) {
@@ -1609,13 +1641,28 @@ a {
   color: #222222;
   grid-column: 2/3;
   grid-row: 1/2;
+  text-transform: uppercase;
   padding-right: 64px;
   margin-bottom: 14px;
 }
 @media (min-width: 768px) {
   .product-card__title {
+    font-size: 20px;
+    line-height: 24px;
+    margin: 0;
+    font-weight: 400;
+    max-width: 165px;
     padding-right: 0;
     margin-bottom: 21px;
+    text-align: center;
+  }
+}
+@media (min-width: 1400px) {
+  .product-card__title {
+    font-size: 20px;
+    line-height: 21px;
+    margin: 0;
+    font-weight: 400;
   }
 }
 
@@ -1647,14 +1694,7 @@ a {
     width: 250px;
     margin-bottom: 33px;
   }
-  .product-card__description tbody {
-    display: flex;
-    flex-grow: 1;
-    flex-direction: column;
-    box-sizing: border-box;
-    width: 100%;
-  }
-  .product-card__description tbody tr {
+  .product-card__description tr {
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid #cdcdcd;
@@ -1681,7 +1721,9 @@ a {
 }
 
 .catalog-additional {
-  padding: 0 20px;
+  max-width: 320px;
+  padding-left: 20px;
+  padding-right: 20px;
   box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
@@ -1689,12 +1731,16 @@ a {
 }
 @media (min-width: 768px) {
   .catalog-additional {
-    padding: 0 30px;
+    max-width: 768px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 @media (min-width: 1400px) {
   .catalog-additional {
-    padding: 0 110px;
+    max-width: 1440px;
+    padding-left: 110px;
+    padding-right: 110px;
   }
 }
 @media (min-width: 768px) {
@@ -1924,31 +1970,12 @@ a {
   }
 }
 
-.form-container {
-  padding: 0 20px;
-  box-sizing: border-box;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-}
-@media (min-width: 768px) {
-  .form-container {
-    padding: 0 30px;
-  }
-}
-@media (min-width: 1400px) {
-  .form-container {
-    padding: 0 110px;
-  }
-}
-
 .form-container__title {
   font-size: 36px;
   line-height: 36px;
   margin: 0;
   font-weight: 400;
-  margin-bottom: 37px;
-  padding-top: 27px;
+  padding: 27px 20px 37px;
 }
 
 .form-container__subtitle {
@@ -1956,45 +1983,163 @@ a {
   line-height: 18px;
   margin: 0;
   font-weight: 400;
-  margin-bottom: 39px;
-  margin-right: 64px;
+  padding: 0 74px 39px 20px;
+  text-transform: uppercase;
 }
 
 .form {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  padding-bottom: 32px;
+}
+@media (min-width: 768px) {
+  .form {
+    padding-bottom: 72px;
+  }
+}
+@media (min-width: 1400px) {
+  .form {
+    padding-bottom: 82px;
+  }
 }
 
 .form__cat-data {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  gap: 46px;
-  margin-bottom: 45px;
+  margin-bottom: 26px;
+}
+@media (min-width: 768px) {
+  .form__cat-data {
+    margin-left: 70px;
+    margin-right: 67px;
+    margin-bottom: 71px;
+    gap: 72px;
+  }
+}
+@media (min-width: 1400px) {
+  .form__cat-data {
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 69px;
+    margin-left: 110px;
+    margin-right: 110px;
+  }
 }
 
 .form__fieldset {
+  max-width: 320px;
+  padding-left: 20px;
+  padding-right: 20px;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  box-sizing: border-box;
   flex-wrap: wrap;
   gap: 13px;
   max-width: 100%;
-  padding: 0;
+  padding-top: 0;
+  padding-bottom: 24px;
   margin: 0;
   border: none;
 }
-.form__fieldset--owner, .form__fieldset--comment {
-  margin-bottom: 24px;
+@media (min-width: 768px) {
+  .form__fieldset {
+    max-width: 768px;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+@media (min-width: 1400px) {
+  .form__fieldset {
+    max-width: 1440px;
+    padding-left: 110px;
+    padding-right: 110px;
+  }
+}
+@media (min-width: 768px) {
+  .form__fieldset {
+    gap: 20px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+@media (min-width: 1400px) {
+  .form__fieldset {
+    padding-bottom: 0;
+  }
 }
 .form__fieldset--additional {
   margin-bottom: 34px;
+  padding-bottom: 0;
 }
-
+@media (min-width: 768px) {
+  .form__fieldset--additional {
+    justify-content: space-between;
+    flex-direction: row;
+    padding-left: 70px;
+    padding-right: 70px;
+    margin-bottom: 54px;
+    row-gap: 32px;
+  }
+}
+@media (min-width: 1400px) {
+  .form__fieldset--additional {
+    padding-left: 110px;
+    padding-right: 110px;
+    margin-bottom: 61px;
+  }
+}
+@media (min-width: 768px) {
+  .form__fieldset--owner, .form__fieldset--comment {
+    padding-left: 70px;
+    padding-right: 67px;
+    margin-bottom: 65px;
+  }
+}
+@media (min-width: 1400px) {
+  .form__fieldset--owner, .form__fieldset--comment {
+    padding-left: 110px;
+    padding-right: 110px;
+  }
+}
+.form__fieldset--owner {
+  flex-direction: row;
+  justify-content: space-between;
+}
+.form__fieldset--radio {
+  padding-top: 22px;
+  padding-bottom: 19px;
+  border-top: 1px solid #d9d9d9;
+  border-bottom: 1px solid #d9d9d9;
+}
+@media (min-width: 768px) {
+  .form__fieldset--radio {
+    border: 1px solid #d9d9d9;
+    padding: 25px 28px;
+    gap: 13px;
+  }
+}
+@media (min-width: 1400px) {
+  .form__fieldset--radio {
+    width: 569px;
+  }
+}
 .form__input-wrapper {
   display: flex;
   align-items: center;
   gap: 10px;
+}
+@media (min-width: 768px) {
+  .form__input-wrapper {
+    width: 630px;
+  }
+}
+@media (min-width: 1400px) {
+  .form__input-wrapper {
+    width: 569px;
+  }
 }
 
 .form__label {
@@ -2003,7 +2148,16 @@ a {
   margin: 0;
   font-weight: 400;
   text-transform: uppercase;
+  box-sizing: border-box;
   padding: 6px 0;
+}
+@media (min-width: 768px) {
+  .form__label {
+    font-size: 20px;
+    line-height: 30px;
+    margin: 0;
+    font-weight: 400;
+  }
 }
 .form__label--radio {
   position: relative;
@@ -2020,6 +2174,13 @@ a {
   border: 1px solid #cdcdcd;
   border-radius: 50%;
 }
+@media (min-width: 768px) {
+  .form__label--radio::before {
+    left: -60px;
+    width: 40px;
+    height: 40px;
+  }
+}
 .form__label--radio::after {
   position: absolute;
   top: 10px;
@@ -2028,6 +2189,20 @@ a {
   height: 12px;
   border-radius: 50%;
   background-color: #68b738;
+}
+@media (min-width: 768px) {
+  .form__label--radio::after {
+    left: -48px;
+    top: 12px;
+    width: 18px;
+    height: 18px;
+  }
+}
+@media (min-width: 768px) {
+  .form__label--radio {
+    margin-left: 60px;
+    padding: 5px 0;
+  }
 }
 .form__label--checkbox {
   position: relative;
@@ -2039,27 +2214,62 @@ a {
   content: "";
   top: 0;
   left: -45px;
-  width: 26px;
-  height: 26px;
+  width: 30px;
+  height: 30px;
   border: 1px solid #cdcdcd;
+}
+@media (min-width: 768px) {
+  .form__label--checkbox::before {
+    width: 40px;
+    height: 40px;
+    left: -60px;
+  }
 }
 .form__label--checkbox::after {
   position: absolute;
-  top: 0;
-  left: -45px;
+  top: 2px;
+  left: -43px;
   width: 26px;
   height: 26px;
   background: url("../img/icons/tick-icon.svg") no-repeat;
+}
+@media (min-width: 768px) {
+  .form__label--checkbox::after {
+    left: -53px;
+    top: 6px;
+    background: url("../img/icons/tick-icon-tablet.svg") no-repeat;
+  }
+}
+@media (min-width: 768px) {
+  .form__label--checkbox {
+    width: 37%;
+    margin-left: 60px;
+  }
+}
+@media (min-width: 1400px) {
+  .form__label--checkbox {
+    width: 230px;
+  }
 }
 
 .form__input {
   font-family: inherit;
   color: #444444;
+  text-transform: uppercase;
   flex-grow: 1;
   font-size: 16px;
   line-height: 18px;
   padding: 14px 15px;
   border: 1px solid #e7e7e7;
+}
+@media (min-width: 768px) {
+  .form__input {
+    font-size: 20px;
+    line-height: 30px;
+    margin: 0;
+    font-weight: 400;
+    padding: 11px 20px;
+  }
 }
 
 .form__input[type=radio]:checked + .form__label--radio::after {
@@ -2078,6 +2288,63 @@ a {
   padding-right: 93px;
   margin-bottom: 35px;
 }
+@media (min-width: 768px) {
+  .form__title {
+    margin-bottom: 76px;
+  }
+}
+.form__title--header {
+  font-size: 36px;
+  line-height: 36px;
+  margin: 0;
+  font-weight: 400;
+  padding: 27px 20px 37px;
+}
+@media (min-width: 768px) {
+  .form__title--header {
+    font-size: 60px;
+    line-height: 60px;
+    margin: 0;
+    font-weight: 400;
+    padding: 65px 20px 54px 69px;
+  }
+}
+@media (min-width: 1400px) {
+  .form__title--header {
+    padding: 77px 110px 56px;
+  }
+}
+.form__title--additional {
+  margin-bottom: 34px;
+}
+@media (min-width: 768px) {
+  .form__title--additional {
+    margin-bottom: 57px;
+  }
+}
+
+.form__subtitle {
+  font-size: 14px;
+  line-height: 18px;
+  margin: 0;
+  font-weight: 400;
+  padding: 0 74px 39px 20px;
+  text-transform: uppercase;
+}
+@media (min-width: 768px) {
+  .form__subtitle {
+    font-size: 20px;
+    line-height: 30px;
+    margin: 0;
+    font-weight: 400;
+    padding: 0 375px 67px 70px;
+  }
+}
+@media (min-width: 1400px) {
+  .form__subtitle {
+    padding: 0 897px 66px 110px;
+  }
+}
 
 .form__comment {
   font-size: 16px;
@@ -2091,6 +2358,54 @@ a {
   text-transform: uppercase;
   color: #444444;
 }
+@media (min-width: 768px) {
+  .form__comment {
+    font-size: 20px;
+    line-height: 30px;
+    margin: 0;
+    font-weight: 400;
+  }
+}
+
+.form__footer {
+  max-width: 320px;
+  padding-left: 20px;
+  padding-right: 20px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 21px;
+}
+@media (min-width: 768px) {
+  .form__footer {
+    max-width: 768px;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+@media (min-width: 1400px) {
+  .form__footer {
+    max-width: 1440px;
+    padding-left: 110px;
+    padding-right: 110px;
+  }
+}
+@media (min-width: 768px) {
+  .form__footer {
+    flex-direction: row;
+    align-items: center;
+    padding-left: 70px;
+    padding-right: 70px;
+    gap: 64px;
+  }
+}
+@media (min-width: 1400px) {
+  .form__footer {
+    padding-left: 110px;
+    padding-right: 110px;
+  }
+}
 
 .form__footnote {
   margin: 0;
@@ -2100,6 +2415,5 @@ a {
   line-height: 16px;
   color: #000000;
   align-self: center;
-  padding-top: 21px;
 }
 /*# sourceMappingURL=style.css.map */
