:heavy_check_mark: Сборка #5

--- a/5/css/style.css
+++ b/5/css/style.css
@@ -2008,10 +2008,12 @@ a {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  max-width: 320px;
   margin-bottom: 26px;
 }
 @media (min-width: 768px) {
   .form__cat-data {
+    max-width: 768px;
     margin-left: 70px;
     margin-right: 67px;
     margin-bottom: 71px;
@@ -2022,9 +2024,11 @@ a {
   .form__cat-data {
     flex-direction: row;
     justify-content: space-between;
+    max-width: 1220px;
     margin-bottom: 69px;
     margin-left: 110px;
     margin-right: 110px;
+    gap: 0;
   }
 }
 
