Adds fix of radio and checkbox decor

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -154,21 +154,21 @@
 
   &--radio {
     position: relative;
-    margin-left: 45px;
+    padding-left: 45px;
     cursor: pointer;
 
     &::before {
       position: absolute;
       content: "";
       top: 0;
-      left: -45px;
+      left: 0;
       width: 30px;
       height: 30px;
       border: 1px solid #cdcdcd;
       border-radius: 50%;
 
       @media (min-width: $tablet-width) {
-        left: -60px;
+        left: 0;
         width: 40px;
         height: 40px;
       }
@@ -177,36 +177,35 @@
     &::after {
       position: absolute;
       top: 10px;
-      left: -35px;
+      left: 10px;
       width: 12px;
       height: 12px;
       border-radius: 50%;
       background-color: #68b738;
 
       @media (min-width: $tablet-width) {
-        left: -48px;
-        top: 12px;
+        left: 11px;
+        top: 11px;
         width: 18px;
         height: 18px;
       }
     }
 
     @media (min-width: $tablet-width) {
-      margin-left: 60px;
-      padding: 5px 0;
+      padding: 5px 0 5px 60px;
     }
   }
 
   &--checkbox {
     position: relative;
-    margin-left: 45px;
+    padding-left: 45px;
     cursor: pointer;
 
     &::before {
       position: absolute;
       content: "";
       top: 0;
-      left: -45px;
+      left: 0;
       width: 30px;
       height: 30px;
       border: 1px solid #cdcdcd;
@@ -214,32 +213,31 @@
       @media (min-width: $tablet-width) {
         width: 40px;
         height: 40px;
-        left: -60px;
       }
     }
 
     &::after {
       position: absolute;
       top: 2px;
-      left: -43px;
+      left: 2px;
       width: 26px;
       height: 26px;
       background: url("../img/icons/tick-icon.svg") no-repeat;
 
       @media (min-width: $tablet-width) {
-        left: -53px;
-        top: 6px;
+        left: 7px;
+        top: 7px;
         background: url("../img/icons/tick-icon-tablet.svg") no-repeat;
       }
     }
 
     @media (min-width: $tablet-width) {
-      width: 37%;
-      margin-left: 60px;
+      min-width: 282px;
+      padding-left: 60px;
     }
 
     @media (min-width: $desktop-width) {
-      width: 230px;
+      min-width: 230px;
     }
   }
 }
